# 3D_camera_localization_LS

./: 1b-3D-Camera-Localization.g2o  CMakeLists.txt  DictPoints.h  Landmark.h  Observation.h  Pose.h  ProbabilisticRobotics_CMakeLists.txt  ProbabilisticRobotics_Observation.h  ProbabilisticRobotics_distance_map_correspondence_finder.cpp  ProbabilisticRobotics_g2o_parser.h  ProbabilisticRobotics_main.cpp  ProbabilisticRobotics_points_utils.cpp  ProjectPoint.h  README  Test.h  Transition.h  ad_multivariate.h  ad_multivariate_test.cpp  camera.cpp  camera.h  defs.h  distance_map.cpp  g2o_parser.h  main.cpp  p3p_solver.cpp  p3p_solver.h  points_utils.cpp  points_utils.h
autodiff/src/: ad_multivariate.h
report/: reportPR.aux  reportPR.tex
